syntax = "proto3";

package student;

option go_package = "example.com/student/students/proto";


message Student {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string mobile = 4;
}

message StudentId {
    int32 id = 1;
}

service StudentService {
    rpc AddStudent(Student) returns (Student);
    rpc GetStudentById(StudentId) returns (Student);
    rpc UpdateStudent(Student) returns (Student);
    rpc DeleteStudent(StudentId) returns (Student);
}
